--- a/External/TODO.txt
+++ b/External/TODO.txt
@@ -1,31 +1,28 @@
-Something with opening the file is not working, almost working but check
+**Immediate (NOW):**
+- Publish exe file and release on GitHub.
+- Rename methods from Console.WriteLine to Debug.WriteLine. Organise them.
+- Enable editing and saving changes to columns.
+- Adjust column order to prioritize content over comments.
+- Ensure columns extend fully without leaving gaps.
+- Fix row deletion by selecting the previous row.
+- Resolve issue with ordering IDs to correspond with rows.
 
-NOW
-Sorting by column and saving will save file with new sorting but IDs stay the same.
-Possible solutions:
-    Before saving. Copy List and save in order of IDs.
-    Add new button "Generate IDs based new order".
-    or
-    Find solution so the sorted list by column does not affect the list.
-When asking if save file, change icon of that window.
-Write changes in text file in version folder.
+**Upcoming (SOON):**
+- Implement sorting by column while preserving original IDs.
+- Provide options for saving sorted data without altering IDs.
+- Update save file icon to indicate changes.
+- Record modifications in a text file within the version folder.
 
-LATER
-Open/Save file, default location is current file. If no file, then internal program folder
-Disable buttons if they do nothing
-Update statistics after each change
-Confirm changes of table cell by clicking elsewhere
-Enter goes to next cell on the right
-Button - open file explorer to open any csv file
-Button - save as CSV in any location you want
-Button - save changes current file
-Check of integrity of dates of watched (in normal id sort or normal file, date cannot go back)
-Prepare program for release. Make sure you create exe file using jlink and program is ready to be used by people.
-If entered a title and release year, check if duplicate exists in case someone forgot.
-Select multiple rows and make actions upon them
-    Cut,
-    Copy,
-    Paste,
-    Delete,
-Shortcut and undo action maybe?
-Learn hibernate and spring. What even are they?
+**Future Plans (FUTURE):**
+- Enable default file locations for Open/Save operations.
+- Disable non-functional buttons.
+- Automatically update statistics after each modification.
+- Require confirmation for cell changes.
+- Implement 'Enter' key navigation between cells.
+- Include buttons to open, save, and save changes in different locations.
+- Ensure integrity of dates, preventing backward progression.
+- Prepare the program for release, including executable creation with jlink.
+- Perform duplicate checks for entered titles and release years.
+- Enable actions on multiple selected rows: Cut, Copy, Paste, Delete.
+- Consider implementing shortcut keys and an undo feature.
+- Explore learning opportunities with Hibernate and Spring frameworks.
