--- a/External/TODO.txt
+++ b/External/TODO.txt
@@ -4,11 +4,13 @@
 - Button to expand/shrink datagrid to titles and other data lenght.
 - Try to display data in nicer way. Maybe datagrid with source to the arraylist?
 - Add dynamic year statistics. For each year watched display amount of films, average rating.
+- The film table can be very long. Make it scrollable both directions.
+- Save changes dialog. Add save icon and make look more modern.
 
 **Upcoming (SOON):**
 - Extremely slow on big files. 2k films. Investigate.
+  - Maybe in issue with displaying. Check if scroll fixed the issue.
 - Update save file icon to indicate changes.
-- Save changes dialog. Add save icon and make look more modern.
 - Record modifications in a text file within the version folder.
 - If button is disabled, grayscale the icon.
 
