--- a/External/TODO.txt
+++ b/External/TODO.txt
@@ -12,6 +12,8 @@
 	- Currently each edit, makes new sets and lists from the beignning. Instead change the current edited/added record to the correct list and set.
 - Divide settings panel by categories.
 - Refactor CSV reader/writer, mainwindow. Apply single source of truth. Centralise filepath and make these classes get filepath from filmRecordmanager instead of each class has its own filepath string object.
+- When updating to new newer version, the user may copy paste the MyFilms.csv file overwritting the current list of their watched films.
+	- All csv films should be stored inside the folder data in the program directory.
 
 **Upcoming (SOON):**
 - If button is disabled, grayscale the icon.
