working buttons, not save locally yet

--- a/External/TODO.txt
+++ b/External/TODO.txt
@@ -1,12 +1,8 @@
 **Immediate (NOW):**
-- Implement new button actions
-	- Save locally.
-		- Save file in myData folder and check if doesnt overwrite.
-	- Open locally.
-		- Just open file explorer at myData folder.
+- Implement FileManager class and organise your code.
+- Implement search function.
 
 **Upcoming (SOON):**
-- If button is disabled, grayscale the icon.
 - If a film has incorrect or empty release year or rating, display unassigned decade/rating statistic.
 - If release year or watch date is icorrect (unassigned from above), make the cell red but only after deselecting it, not in the middle of adding.
 - Clear all and autosave can result in losing all data if uncareful.
