added context menu actions, moved collection actions like delete to collectionOfFilms class

--- a/External/TODO.txt
+++ b/External/TODO.txt
@@ -1,5 +1,6 @@
 **Immediate (NOW):**
 - Move addfilmrecord, removefilmrecord to collectionsoffilms.
+	check todo tasks
 - Add a button or right click option to open google search result with film title and year.
 
 **Upcoming (SOON):**
