--- a/External/TODO.txt
+++ b/External/TODO.txt
@@ -1,7 +1,6 @@
 **Immediate (NOW):**
-- Move addfilmrecord, removefilmrecord to collectionsoffilms.
-	check todo tasks
-- Add a button or right click option to open google search result with film title and year.
+- Selecting one call will work as selecting all cells in the row.
+- Deleting a whole row will select whole next row.
 
 **Upcoming (SOON):**
 - If a film has incorrect or empty release year or rating, display unassigned decade/rating statistic.
@@ -14,6 +13,7 @@
 - Protection against super big text files. If file is so big it can block the program, display loading and an option to cancel.
 	- If cancel or unexpected close happens. Do not store the last filepath. It will open big file again on startup. If cancel happens, open new empty file.
 - Investigate exceptions when debugging. The ones with tokens and tasks.
+- More flexible statistics. It requires releaseYear, rating, watchDate. If one of them is missing, it should display information about missing columns.
 
 **Future Plans (FUTURE):**
 - Decide what settings are embedded in exe, which are in settings and which are in config file.
