--- a/External/TODO.txt
+++ b/External/TODO.txt
@@ -1,5 +1,6 @@
 **Immediate (NOW):**
-- 
+- Selecting record, then filtering, does not disable the delete button. It should. 
+	- When filtering starts or ends, clear selection and check if button if disabled. Or disable button manually.
 
 **Upcoming (SOON):**
 - If a film has incorrect or empty release year or rating, display unassigned decade/rating statistic.
@@ -18,7 +19,7 @@
 	- Datagrid. User can add columns.
 	- Max film rating.
 	- FilmRecord maybe will have dictionary of values. If it works with datagrid source.
--
+-Use windows 11 accent colour for datagrid and other controls.
 
 **Future Plans (FUTURE):**
 - Decide what settings are embedded in exe, which are in settings and which are in config file.
