--- a/External/TODO.txt
+++ b/External/TODO.txt
@@ -1,9 +1,13 @@
 **Immediate (NOW):**
-- Scrolling list will mix up red cells.
-	- Fix the issue caused by virtualization of rows.
-- If a film has incorrect or empty release year or rating, display unassigned decade/rating statistic.
-	- Filtering clears the coloured cells.
-	- Create a counter for invalid cells.
+- Create dictionary in FilmRecord model.
+- Modify CSV classes so they can read all columns.
+- Column manager
+	- RESPONSIBLE FOR COLUMNS. THEY ARE STORED IN THE LIST AND REARRANGING COLUMNS WILL REARANGE THE LIST OF THEM.
+- More flexible CSV file format. Start making it more custom.
+	- Datagrid autofill.
+	- Datagrid. User can add columns.
+	- Max film rating.
+	- FilmRecord maybe will have dictionary of values. If it works with datagrid source.
 
 **Upcoming (SOON):**
 - If release year or watch date is icorrect (unassigned from above), make the cell red but only after deselecting it, not in the middle of adding.
@@ -16,14 +20,14 @@
 	- If cancel or unexpected close happens. Do not store the last filepath. It will open big file again on startup. If cancel happens, open new empty file.
 - Investigate exceptions when debugging. The ones with tokens and tasks.
 - More flexible statistics. It requires releaseYear, rating, watchDate. If one of them is missing, it should display information about missing columns.
-- More flexible CSV file format. Start making it more custom.
-	- Datagrid autofill.
-	- Datagrid. User can add columns.
-	- Max film rating.
-	- FilmRecord maybe will have dictionary of values. If it works with datagrid source.
 - Use Windows accent colour for buttons and other elements.
 	- Create method that updates selected elements with accent colour. Maybe use styling file so the style applies to all buttons across this program.
-- 
+(DELAYED, MAKE COLUMNS FLEXIBLE AND EDITABLE FIRST)
+- Scrolling list will mix up red cells.
+	- Fix the issue caused by virtualization of rows.
+- If a film has incorrect or empty release year or rating, display unassigned decade/rating statistic.
+	- Filtering clears the coloured cells.
+	- Create a counter for invalid cells.
 
 **Future Plans (FUTURE):**
 - Decide what settings are embedded in exe, which are in settings and which are in config file.
