--- a/External/TODO.txt
+++ b/External/TODO.txt
@@ -1,15 +1,22 @@
 **Immediate (NOW):**
-- Create dictionary in FilmRecord model.
-- Modify CSV classes so they can read all columns.
-- Column manager
-	- RESPONSIBLE FOR COLUMNS. THEY ARE STORED IN THE LIST AND REARRANGING COLUMNS WILL REARANGE THE LIST OF THEM.
+- Reading from any number of csv values works. Uncomment code and fix it one by one.
+- Create ID column.
+- When adding new record, make sure column #1 exists before focuing and doing edit mode.
+- Reordering columns.
+- CSV writer.
+- Add new column.
+- Statistics headers:
+	- Next to statistics header display ribbon menu to select which columns are to be used.
+	- Create method: get list of column headers.
+
+- Do a lot of test before releasing.
+
+**Upcoming (SOON):**
 - More flexible CSV file format. Start making it more custom.
 	- Datagrid autofill.
 	- Datagrid. User can add columns.
 	- Max film rating.
 	- FilmRecord maybe will have dictionary of values. If it works with datagrid source.
-
-**Upcoming (SOON):**
 - If release year or watch date is icorrect (unassigned from above), make the cell red but only after deselecting it, not in the middle of adding.
 - Clear all and autosave can result in losing all data if uncareful.
 	- Clear all and save should save current list as archived list to easy find if accidental loss.
