--- a/External/TODO.txt
+++ b/External/TODO.txt
@@ -8,6 +8,9 @@
 	- When reading a file, check for [commoncollection type, for example [films]].
 	- When saving a file, save [films] in first or any column header.
 	- Create X close tab button.
+	- Each working text file shoud have unsaved changes property.
+	- When changing tab, change: window title bar, statistics, buttons disability.
+	- Add save all button.
 - Fix renaming columns.
 	- New window should start textbox in edit mode.
 	- Pressing enter confirms.
